Added figures for Sections 'Regulation of the Manipulator Motion' and 'Multi-camera Scenario'

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -1313,13 +1313,33 @@ An attempt was made to localize another moving target in \textsc{pitch} dataset 
 %-------------------------------------------------------------------------
 \section{Regulation of the Manipulator Motion} \label{txt:test_regulation}
 
-\vata[7]
+% Comparison of different regulation functions as tested in the hardware-in-the-loop manner.
+\begin{figure}[htb]\centering
+	\centering
+	\includegraphics[width=0.75\linewidth]{fig/test_regulation_lin_pow.pdf}
+	\caption{.}
+	\label{fig:test_reg_lin_pow}
+\end{figure}
+
+% Comparison of amount of time for future position prediciton.
+\begin{figure}[htb]\centering
+	\centering
+	\includegraphics[width=0.95\linewidth]{fig/schema_defile_and_motion_prediction.pdf}
+	\caption{.}
+	\label{fig:test_motion_predict}
+\end{figure}
 
 %-------------------------------------------------------------------------
 %-------------------------------------------------------------------------
 \section{Multi-camera scenario} \label{txt:multi-camera_scenario}
 
-\vata[7]
+% Schema of testing two vs three units and plot with error results.
+\begin{figure}[htb]\centering
+	\centering
+	\includegraphics[width=0.95\linewidth]{fig/schema_two_vs_three_units_and_plot.pdf}
+	\caption{.}
+	\label{fig:test_two_vs_three_cus}
+\end{figure}
 
 %=========================================================================
 %=========================================================================
