--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -514,7 +514,7 @@ As for the network topology, the OLS is based on a star pattern where each track
 
 %-------------------------------------------------------------------------
 %-------------------------------------------------------------------------
-\section{Precision Analysis}
+\section{Precision Analysis} \label{txt:precision_analysis}
 
 
 %=========================================================================
@@ -1317,7 +1317,7 @@ An attempt was made to localize another moving target in \textsc{pitch} dataset 
 
 As explained in Section \ref{txt:2d_motion_prediction_and_regulation} it is desirable to keep the tracked target as close to the image center as possible by instructing the P\&T unit to rotate the camera. Furthermore, the motion should be smooth and as fast as possible, however, it should cope with the delays imposed by the visual tracker computation, the communication latency and the latency of the hardware (P\&T unit). Hardware-in-the-loop approach was taken in order to test the real P\&T unit in the simulated environment and the \textit{GT tracker} (see Section \ref{txt:implementation}) was utilized.
 
-In the first test both proposed regulation functions (linear and power, see Section \ref{txt:2d_motion_prediction_and_regulation}) with various settings of parameters $a$ and $k$. In this scenario the objective was to position the camera so as to aim directly on the static target. The constants $\mu_{d} = 0.120 s, \sigma_{d} = 0.010 s, \mu_{n}, \sigma_{n}$ were selected for the \textit{GT tracker} to simulate the worst case delay scenario of the visual tracker performance.
+In the first test both proposed regulation functions (linear and power, see Section \ref{txt:2d_motion_prediction_and_regulation}) with various settings of parameters $a$ and $k$. In this scenario the objective was to position the camera so as to aim directly on the static target. The constants $\mu_{d} = 0.120~s, \sigma_{d} = 0.010~s, \mu_{n} = 0~px, \sigma_{n} = 0~px$ were selected for the \textit{GT tracker} to simulate the worst case delay scenario of the visual tracker performance.
 
 As can be seen in Figure \ref{fig:test_reg_lin_pow}, the linear function cannot be too steep (high value of derivative $a$), otherwise the P\&T unit overshoots the target position and it must return (the cases of linear functions where $a = 1.0$ and $a = 5.0$) which is inadmissible behavior. Contrarily, if set correctly the power functions do not cause the overshoot and converge faster. As the result the power function with parameters $a = 2.26,~k = 1.5$ is used in the OLS.
 
@@ -1331,7 +1331,7 @@ As can be seen in Figure \ref{fig:test_reg_lin_pow}, the linear function cannot 
 
 In order to keep the moving targets close to the center of the image plane, the prediction of future position of the target must be employed (see Section \ref{txt:2d_motion_prediction_and_regulation}). A suitable value of variable $T_{pred}$ specifying the time in the future for which the position of the target is predicted should be chosen. If $T_{pred}$ is too small the P\&T unit is not able to keep up with the motion of the target and the center of the image screen always falls behind the target. Contrarily, if $T_{pred}$ is too high, the P\&T unit overshoots to the \textit{cutoff} region (see Figure \ref{fig:regulation_lin_power}) and anticipates the position of the target.
 
-Therefore, in the second test a simple scenario consisting of one P\&T unit and the simulated target moving with a constant speed along a line between two boundaries was created. Different values for prediction time $T_{pred}$ were set and the horizontal distance $d_{h}$ between the center of the image $PP$ and the projection $t$ of the target $T$ was measured (see Figure \ref{fig:test_motion_predict}). As ws expected, with increasing value of $T_{pred}$ the overall distance $d_{h}$ decreases up to the point where the P\&T unit starts to overshoot. Note that it is not possible to select the best universal value since the performance depends on the distance, speed and motion model of the target. Therefore, it is necessary to choose the right value with regards to the given scenario.
+Therefore, in the second test a simple scenario consisting of one P\&T unit and the simulated target moving with a constant speed along a line between two boundaries was created. Different values for prediction time $T_{pred}$ were set and the horizontal distance $d_{h}$ between the center of the image $PP$ and the projection $t$ of the target $T$ was measured (see Figure \ref{fig:test_motion_predict}). As was expected, with increasing value of $T_{pred}$ the overall distance $d_{h}$ decreases up to the point where the P\&T unit starts to overshoot. Note that it is not possible to select the best universal value since the performance depends on the distance, speed and motion model of the target. Therefore, it is necessary to choose the right value with regards to the given scenario.
 
 % Comparison of amount of time for future position prediciton.
 \begin{figure}[htb]\centering
@@ -1343,13 +1343,19 @@ Therefore, in the second test a simple scenario consisting of one P\&T unit and 
 
 %-------------------------------------------------------------------------
 %-------------------------------------------------------------------------
-\section{Multi-camera scenario} \label{txt:multi-camera_scenario}
+\section{Multi-camera Scenario} \label{txt:multi-camera_scenario}
+
+As was shown in Chapter \ref{txt:precision_analysis} the precision of localizing the target in 3-space significantly depends on the angle $\gamma$ between the baseline and the direction to the target. However, this geometry limitation can be alleviated by using multiple CUs which are appropriately placed within the environment so that there could be always chosen at least one baseline which is oriented conveniently with regards to the target.
+
+In order to test the proposed approach of incorporating the target-base geometry by weighting the measurements from separate baselines (see Section \ref{txt:incorporating_target-base_geometry}) two scenarios comparing the localization precision of two and three CUs was created. In both cases the goal was to localize the target moving with constant speed along the circle. In order to simulate the random error of single visual trackers, the \textit{GT tracker} with parameters $\mu_{d} = 0.120~s, \sigma_{d} = 0.010~s, \mu_{n} = 0~px, \sigma_{n} = 15~px$ was used. 
+
+In the first scenario only two CUs ($CU_{1}$, $CU_{2}$) are used and thus there are two critical regions $CR_{1}$ and $CR_{2}$ along the baseline within which the localization error is expected to be high. In the second scenario the third $CU_{3}$ was added so that all three CUs would form regular triangle. It was expected that both critical regions would be covered by two newly created baselines. As can be seen in Figure \ref{fig:test_two_vs_three_cus}) the expectations were met.
 
 % Schema of testing two vs three units and plot with error results.
 \begin{figure}[htb]\centering
 	\centering
 	\includegraphics[width=0.95\linewidth]{fig/schema_two_vs_three_units_and_plot.pdf}
-	\caption{.}
+	\caption{The figure to the left depicts the schematic view of two test scenarios where either two or three CUs are used. The target $T$ moves along the circle with constant speed in the height of $2~m$. The figure to the right depicts the localization error $E$ as the function of time for both scenarios. It can be seen that in the two-camera scenario the error $E$ increases rapidly once the target reaches either of the critical regions $CR_{1}$ and $CR_{2}$.}
 	\label{fig:test_two_vs_three_cus}
 \end{figure}
 
